--- a/package.json
+++ b/package.json
@@ -9,88 +9,96 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.7.4",
+    "@auth/prisma-adapter": "^2.7.2",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.1",
-    "@mantine/hooks": "^7.15.3",
-    "@prisma/client": "^6.1.0",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
-    "@radix-ui/react-aspect-ratio": "^1.1.1",
+    "@mantine/hooks": "^7.13.5",
+    "@prisma/client": "^5.21.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-hover-card": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-radio-group": "^1.2.2",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.4",
+    "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-slider": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "@react-hook/media-query": "^1.1.1",
     "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.47.12",
-    "@tanstack/react-query": "^5.62.15",
-    "@tanstack/react-router": "^1.95.1",
+    "@supabase/supabase-js": "^2.46.1",
+    "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-table": "^8.20.6",
-    "@tiptap/core": "^2.11.0",
-    "@tiptap/extension-character-count": "^2.11.0",
-    "@tiptap/extension-color": "^2.11.0",
-    "@tiptap/extension-image": "^2.11.0",
-    "@tiptap/extension-link": "^2.11.0",
-    "@tiptap/extension-placeholder": "^2.11.0",
-    "@tiptap/extension-text-style": "^2.11.0",
-    "@tiptap/extension-underline": "^2.11.0",
-    "@tiptap/pm": "^2.11.0",
-    "@tiptap/react": "^2.11.0",
-    "@tiptap/starter-kit": "^2.11.0",
-    "@uploadthing/react": "^7.1.5",
-    "@xyflow/react": "^12.3.6",
-    "axios": "^1.7.9",
+    "@tiptap/extension-bubble-menu": "^2.9.1",
+    "@tiptap/extension-character-count": "^2.9.1",
+    "@tiptap/extension-color": "^2.9.1",
+    "@tiptap/extension-floating-menu": "^2.9.1",
+    "@tiptap/extension-history": "^2.9.1",
+    "@tiptap/extension-image": "^2.9.1",
+    "@tiptap/extension-link": "^2.9.1",
+    "@tiptap/extension-list-item": "^2.9.1",
+    "@tiptap/extension-placeholder": "^2.9.1",
+    "@tiptap/extension-task-item": "^2.9.1",
+    "@tiptap/extension-task-list": "^2.9.1",
+    "@tiptap/extension-text-style": "^2.9.1",
+    "@tiptap/extension-underline": "^2.9.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/react": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
+    "@uploadthing/react": "^7.1.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
-    "embla-carousel-autoplay": "^8.5.2",
-    "embla-carousel-react": "^8.5.2",
+    "embla-carousel-autoplay": "^8.3.1",
+    "embla-carousel-react": "^8.3.1",
+    "emoji-mart": "^5.6.0",
     "howler": "^2.2.4",
-    "lucide-react": "^0.469.0",
-    "next": "^14.2.22",
-    "next-auth": "^4.24.11",
+    "lucide-react": "^0.454.0",
+    "next": "^14.1.1",
+    "next-auth": "^4.24.10",
     "next-intl": "^3.26.3",
-    "next-themes": "^0.4.4",
-    "nuqs": "^2.3.0",
-    "react": "^18.3.1",
+    "next-themes": "^0.3.0",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-contenteditable": "^3.3.7",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
-    "react-textarea-autosize": "^8.5.6",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-hook-form": "^7.53.1",
+    "react-textarea-autosize": "^8.5.4",
     "reactflow": "^11.11.4",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "unique-username-generator": "^1.4.0",
-    "uploadthing": "^7.4.4",
+    "unique-username-generator": "^1.3.0",
+    "uploadthing": "^7.2.0",
     "use-debounce": "^10.0.4",
-    "uuid": "^11.0.4",
-    "zod": "^3.24.1"
+    "uuid": "^11.0.2",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/bcrypt": "^5.0.2",
     "@types/howler": "^2.2.12",
-    "@types/node": "^20.17.12",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "postcss": "^8",
-    "prisma": "^6.1.0",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
