--- a/package.json
+++ b/package.json
@@ -73,10 +73,10 @@
     "next-auth": "^4.24.10",
     "next-intl": "^3.26.3",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "^17.0.2",
     "react-contenteditable": "^3.3.7",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.53.1",
     "react-textarea-autosize": "^8.5.4",
     "reactflow": "^11.11.4",
